[gd_scene load_steps=20 format=2]

[ext_resource path="res://entity/Bullet/BulletBasic.cs" type="Script" id=1]
[ext_resource path="res://entity/player/Reimu/reimu.gd" type="Script" id=2]
[ext_resource path="res://entity/Bullet/Seeker.cs" type="Script" id=3]
[ext_resource path="res://entity/player/focus.png" type="Texture" id=4]
[ext_resource path="res://shader/item/time-rotate.gdshader" type="Shader" id=5]
[ext_resource path="res://entity/Bullet/textures/ofuda.png" type="Texture" id=6]
[ext_resource path="res://entity/player/Reimu/reimu.png" type="Texture" id=7]
[ext_resource path="res://entity/player/Reimu/ofuda-tail.png" type="Texture" id=8]
[ext_resource path="res://entity/player/Reimu/orb.gd" type="Script" id=9]
[ext_resource path="res://shader/item/hsv-adjust.gdshader" type="Shader" id=11]
[ext_resource path="res://entity/player/Reimu/yinyangOrb.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CircleShape2D" id=27]
radius = 80.0

[sub_resource type="CircleShape2D" id=16]
radius = 40.0

[sub_resource type="ParticlesMaterial" id=25]
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
angular_velocity = 227.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ShaderMaterial" id=30]
shader = ExtResource( 11 )
shader_param/hue = 0.741
shader_param/saturation = 1.0
shader_param/brightness = 0.877

[sub_resource type="ShaderMaterial" id=24]
shader = ExtResource( 11 )
shader_param/hue = 1.0
shader_param/saturation = 1.0
shader_param/brightness = 1.0

[sub_resource type="ShaderMaterial" id=29]
shader = ExtResource( 5 )
shader_param/speed = 1.0

[node name="reimu" type="StaticBody2D"]
position = Vector2( 0, 1 )
collision_layer = 4
collision_mask = 0
constant_linear_velocity = Vector2( 3, 0 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 5
frames = SubResource( 14 )
__meta__ = {
"_editor_description_": ""
}

[node name="hitbox" type="CollisionShape2D" parent="."]
visible = false
z_index = 10
shape = SubResource( 7 )

[node name="item" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="item"]
shape = SubResource( 27 )

[node name="graze" type="StaticBody2D" parent="."]
pause_mode = 2
visible = false
collision_layer = 8
collision_mask = 0
constant_linear_velocity = Vector2( 4, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="graze"]
z_index = 9
shape = SubResource( 16 )

[node name="grazeFX" type="Particles2D" parent="graze"]
emitting = false
lifetime = 0.5
process_material = SubResource( 25 )

[node name="Timer" type="Timer" parent="graze/grazeFX"]
wait_time = 0.15
one_shot = true

[node name="focus" type="Sprite" parent="."]
material = SubResource( 30 )
z_index = 6
texture = ExtResource( 4 )

[node name="hitFx" type="Sprite" parent="."]
material = SubResource( 24 )

[node name="hitSfx" type="AudioStreamPlayer" parent="hitFx"]

[node name="Tween" type="Tween" parent="hitFx"]

[node name="bullet" type="Node2D" parent="."]
position = Vector2( 1, 4 )
script = ExtResource( 1 )
CollideWithAreas = true
CollisionLayer = 3
texture = ExtResource( 8 )
maxBullet = 57
speed = 727.0
Grazable = false
zIndex = 1

[node name="Position2D" type="Position2D" parent="bullet"]
position = Vector2( 7, -38 )
rotation = -1.5708

[node name="Position2D2" type="Position2D" parent="bullet"]
position = Vector2( -7, -58 )
rotation = -1.5708

[node name="Timer" type="Timer" parent="bullet" groups=["player_bullet"]]
process_mode = 0
wait_time = 0.143
autostart = true

[node name="bullet2" type="Node2D" parent="."]
position = Vector2( -65, 54 )
z_index = 6
script = ExtResource( 3 )
CollideWithAreas = true
CollisionLayer = 3
texture = ExtResource( 6 )
maxBullet = 57
speed = 727.0
Grazable = false
zIndex = 1
seekRadius = 646.0
seekAreas = true
seekBodies = false

[node name="YinyangOrb" type="Sprite" parent="bullet2"]
material = SubResource( 29 )
position = Vector2( -50, 0 )
rotation = -1.74533
texture = ExtResource( 12 )

[node name="YinyangOrb2" type="Sprite" parent="bullet2"]
material = SubResource( 29 )
rotation = -1.74533
texture = ExtResource( 12 )
script = ExtResource( 9 )

[node name="YinyangOrb3" type="Sprite" parent="bullet2/YinyangOrb2"]
material = SubResource( 29 )
position = Vector2( -22.4006, 127.04 )
texture = ExtResource( 12 )
flip_h = true
flip_v = true

[node name="Dummy" type="Node2D" parent="bullet2"]
position = Vector2( 129, -1.52588e-05 )
rotation = -1.39626

[node name="YinyangOrb4" type="Sprite" parent="bullet2"]
material = SubResource( 29 )
position = Vector2( 180, 0 )
rotation = -1.39626
texture = ExtResource( 12 )
flip_h = true
flip_v = true

[node name="Timer2" type="Timer" parent="bullet2" groups=["player_bullet"]]
process_mode = 0
wait_time = 0.333
autostart = true

[connection signal="timeout" from="bullet/Timer" to="bullet" method="SpawnBullet"]
[connection signal="timeout" from="bullet2/Timer2" to="bullet2" method="SpawnBullet"]
